--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
   position: relative;
   bottom: 0;
   left: 0;
-  background-color: #39887e;
+  background-color: #4b5fa0;
   border: 1px solid white;
   border-radius: 6px;
   position: absolute;
